--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@reduxjs/toolkit": "^2.3.0",
     "cloudinary": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
